# artifacts-fth-dns-fwd

./: .gitignore  Makefile  README.md  check-requirements.sh  pyproject.toml  requirements.txt
artifacts_fth_dns_fwd/: __init__.py  dataset.py  features.py  filter.py  helper.py  plots.py
data/processed/dnsscan/: frequency_per_type_over_time.csv
data/processed/fingerprinting/: fingerprinting_results-enriched.csv  fingerprinting_results.csv
data/processed/mikrotik-testing/2025-04-08_15-11-09_recursive_1514_byte_TXT_non_fragmented/: ratelimit_record_192.168.88.1.csv
data/processed/mikrotik-testing/2025-04-08_15-14-11_recursive_3280_byte_TXT_fragmented_40_times_amplified/: ratelimit_record_192.168.88.1.csv
data/processed/mikrotik-testing/2025-04-08_15-22-35_transparent_3280_byte_TXT_fragmented_40_times_amplified/: ratelimit_record_192.168.88.1.csv
data/processed/mikrotik-testing/2025-04-09_13-32-56_transparent_1514_byte_TXT_non_fragmented_40000pps/: ratelimit_record_192.168.88.1.csv
data/processed/pub_dns_servers/: public_dns_servers.txt
data/processed/ratelimits/: 2025-01-12_15-40-44_rm-direct_dm-constant_incr-2000ms_max-rate-3000pps.csv  rates_scan-24.08.2024_rate-01.10.2024_public_resolvers.csv  rates_scan-24.08.2024_rate-29.08.2024_static_domain_newest_ver.csv
data/processed/response_times/: response_times_tfwd_vs_rfwd.csv
notebooks/: Artifacts-Paper-Plots.ipynb  Artifacts-Paper-Tables.ipynb  tables.html  tables.ipynb
scan/: run_scan.sh
scan/odns-measurement-tools/src/: exclude_ips.txt
scan/odns-measurement-tools/src/common/: common.go
(+15 files in other folders)
